configuration/argo/canary/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-stable
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: canary-preview
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: rollouts-demo
